openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: incident-board
  labels:
    name: incident-board
    description: "DevOps Incident Board Microservices"
